# PyES

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  TODO.md  feed.xml  files.publii.json  flatte.bat  flatten-publii.ps1  flatten.bat  index.html  pyproject.toml  release_text.md  sitemap.xml  tbump.toml  test.json
.github/workflows/: release-multi-os-beta.yml  release-multi-os.yml
authors/bertinetti-stefano/: index.html
home/: index.html
numerical tests/: testzn.json
pyes/: index.html
pyes-files/: feed.json  files.publii.json  index.html  robots.txt  sitemap.xml
requirements/: base.txt
scripts/: beta_renamer.sh  changelog_generator.py  update_requirements.sh
src/main/python/pyes/: dialogs.py  main.py  resources_rc.py  utils_func.py  workers.py  workers_utils.py
src/main/python/pyes/commands/: __init__.py  fields.py  models.py  widgets.py
src/main/python/pyes/optimizers/: distribution.py  optimizer.py
src/main/python/pyes/ui/: Makefile  PyES_about.py  PyES_about.ui  PyES_about_ui.py  PyES_dataExport.py  PyES_dataExport.ui  PyES_dataExport_ui.py  PyES_editDialog.py  PyES_editDialog_ui.py  PyES_graphExport.py  PyES_graphExport.ui  PyES_ionicStrengthInfo.py  PyES_load.py  PyES_load.ui  PyES_load_ui.py  PyES_main.py  PyES_main.ui  PyES_main_ui.py  PyES_monitorWindow.py  PyES_monitorWindow.ui  PyES_monitorWindow_ui.py  PyES_pyqtgraphPlotExport.py  PyES_pyqtgraphPlotExport.ui  PyES_pyqtgraphPlotExport_ui.py  PyES_uncertaintyInfo.py
src/main/python/pyes/ui/widgets/: PyES_inputTitrationOpt.py  PyES_inputTitrationOpt.ui  PyES_inputTitrationOpt_ui.py  PyES_multipleRangeSelector.py  PyES_multipleRangeSelector.ui  PyES_multipleRangeSelector_ui.py  PyES_sequestrationInput.py  PyES_sequestrationInput.ui  PyES_sequestrationInput_ui.py  combobox.py  input.py  range_selector.py  spinbox.py
src/main/python/pyes/viewmodels/: delegate.py  models.py
src/main/python/pyes/windows/: export.py  monitor.py  plot.py  window.py
src/main/resources/base/: resources.qrc  resources_rc.py
tags/: index.html
tests/: test_windows.py
tests/test_data/distribution_data/ac/: ac.json
tests/test_data/distribution_data/cu_gly_solid/: cu_gly_solid.json
tests/test_data/titration_data/titr_hexaprotic/: titr_hexaprotic.json
