[project]
authors = [{ name = "Lorenzo Castellino", email = "castellino96@gmail.com" },
           { name = "Salvador Blasco", email = "salvador.blasco@uv.es" }]
license = { text = "GPLv3" }
requires-python = ">=3.11"
dependencies = [
    "pyinstaller<7,>=5",
    "ppg @ git+ssh://git@github.com/Kastakin/ppg.git@main",
    "pandas>=2.3.3",
    "openpyxl<4.0.0,>=3.0.9",
    "pyqtgraph<1.0.0,>=0.13.0",
    "pyside6-essentials<6.9,>=6.8",
    "libeq",
    "pyside6>=6.8.3",
    "numpy>2.0",
    "pydantic-numpy>=8.0",
    "pytest-qt>=4.5.0",
    "pytest-xvfb>=3.1.1",
    "hypothesis>=6.149.0",
]
name = "pyes"
version = "2.1alpha14"
description = ""

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyinstaller = "~5"
ppg = {git = "ssh://git@github.com/Kastakin/ppg.git", rev = "main"}
pandas = "^1.5.0"
openpyxl = "^3.0.9"
pyqtgraph = "^0.13.0"
pyside6-essentials = "~6.4.0"
numba = "^0.58.1"

[tool.uv.sources]
libeq = { path = "../libeq", editable = true }

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = ["src/main/python/pyes/"]
addopts = "--cov=src/main/python/pyes --cov-report=html --cov-config=.coveragerc"
qt_api = "pyside6"
env = [
    "QT_QPA_PLATFORM=offscreen"
]

[tool.ruff.format]
# Enable preview style formatting.
preview = true

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
